removing old file types (#1948)
* removing old file types

* removing documentation changes

* code review

* code review